# Aplicatie-tonomat-de-dulciuri

./: README.md
tonomat dulciuri/: CMakeLists.txt  entitate.cpp  entitate.h  exceptii.cpp  exceptii.h  filerepo.cpp  filerepo.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  teste.cpp  teste.h  ui.cpp  ui.h  validatori.cpp  validatori.h
